# adaptive-multimodal-rag

./: .env.example  .gitignore  README.md  pyproject.toml
docs/plans/: 2026-07-10-m1-text-rag-foundation.md
docs/specs/: 2026-07-13-m1-pipeline-improvements-design.md
docs/superpowers/plans/: 2026-07-10-m1-text-rag-foundation.md
docs/superpowers/specs/: 2026-07-10-multimodal-rag-design.md  2026-07-13-m1-pipeline-improvements-design.md
results/: diagnostic_litsearch.md  diagnostic_qasper.md  ladder_figure.html  linkedin_post.md  m1_litsearch.md  m1_litsearch_rd100.md  m1_qasper.md  m1_qasper_enriched.md  m1_qasper_enriched_rd100.md  m1_qasper_hyde.md
scripts/: diagnose_ceiling.py  disk.sh  env.sh  run_m1.py
src/amrag/: types.py
src/amrag/corpus/: base.py  litsearch.py  qasper.py
src/amrag/eval/: ablate.py  answer.py  retrieval.py
src/amrag/generate/: llm.py  prompt.py
src/amrag/index/: cache.py  text.py
src/amrag/retrieve/: fuse.py  hyde.py  rerank.py
tests/: test_smoke.py  test_types.py
tests/corpus/: test_litsearch.py  test_qasper.py
tests/eval/: test_ablate.py  test_answer.py  test_retrieval.py
tests/generate/: test_llm.py  test_prompt.py
tests/index/: test_bm25.py  test_cache.py  test_dense.py
tests/retrieve/: test_fuse.py  test_hyde.py  test_rerank.py
