[project]
name = "amrag"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "torch>=2.5", "datasets>=3.0", "rank-bm25>=0.2.2",
  "sentence-transformers>=3.0",
  "pytrec-eval-terrier>=0.5.6", "openai>=1.40",
  "numpy>=2.0", "tqdm>=4.66",
]
[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/amrag", "vendor"]
[tool.pytest.ini_options]
markers = ["slow: needs real model weights or network"]
addopts = "-m 'not slow'"
